# lab-agentic-chat

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: index.html  server.py
